syntax = "proto3";
package request;
option go_package = "douyin/proto/video/request";

message douyin_feed_request {
  int64 latest_time = 1;
  int64 login_user_id = 2;
}

message douyin_publish_action_request {
  string video_url = 1;
  string cover_url = 2;
  string title = 3;
  int64 user_id = 4;
}

message douyin_publish_list_request {
  int64 user_id = 1;
  int64 login_id = 2;
}

message douyin_judge_video_author_request {
  int64 video_id = 1;
}

message douyin_push_v_active_favorite_video_request {
  int64 video_id = 1;
  bool is_v = 2;
  bool is_active = 3;
  bool login_user_is_v = 4;
  bool login_user_is_active = 5;
  int64 login_user_id = 6;
  int64 author_id = 7;
}


message douyin_delete_v_active_favorite_video_request {
  int64 video_id = 1;
  int64 user_id = 2;
  bool login_user_is_v = 4;
  bool login_user_is_active = 5;
}

message douyin_get_v_active_favorite_video_request {
  int64 user_id = 2;
  bool is_v = 4;
  bool is_active = 5;
}

message douyin_get_video_list_request {
  repeated int64  video_id = 1;
}

message Simple_Video {
  int64 id = 1;
  int64 user_id = 2;
  string play_url = 3;
  string cover_url = 4;
  string title = 8;
}

message douyin_push_v_info_init_request {
  int64 user_id = 1;
  bool is_active = 2;
}

message douyin_push_active_info_init_request {
  repeated int64 user_id = 1;
}

message douyin_get_user_publish_video_count_request {
  int64 userId = 1;
}

message douyin_get_user_publish_video_count_list_request {
  repeated int64 userId = 1;
}